<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    
    <item android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about" />
    <item android:id="@+id/menu_terms_and_condition"
        android:title="@string/menu_terms_and_condition" />
    <item android:id="@+id/menu_system_info" 
        android:icon="@android:drawable/ic_menu_info_details" 
        android:title="@string/system_info" />   
    <item android:id="@+id/menu_activation" 
        android:title="@string/activation_menu_string"/>    
    <item android:id="@+id/menu_export_file" 
        android:title="@string/menu_export_file_string"/>
    <item android:id="@+id/menu_force_background_test" 
        android:title="@string/menu_force_background_test_string"/>
    <!-- item android:id="@+id/menu_map" 
        android:title="@string/menu_map"/ -->    
        
    <item android:id="@+id/menu_share_averages"
          android:icon="@drawable/sharethis_32x32"
          android:title="@string/menu_social_media_export"
          android:showAsAction="always" />
</menu>
