<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    style="@style/screenBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

     <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/terms_of_use_title"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/terms_of_use_title" />

          <ScrollView
            android:id="@+id/webscrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/webview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/line_break"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/pagedrop" />

                <Button
                    android:id="@+id/btn_continue"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/icon_right"
                    android:gravity="left|center_vertical"
                    android:text="@string/continue_text"
                    android:textColor="#000000" />

              </LinearLayout>
      </ScrollView>    

    </LinearLayout>

</RelativeLayout>